INIT:new changes

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body>
+  <ul class="navbar">
+    <li><a href=""><i class="fa fa-linkedin-square"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-youtube"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-twitter-square"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-facebook-square"></i>
+    </a></li>
+</ul>
+
+  <header class="header">
+    <div>
+      <a href="#">HOME</a>
+      <a href="#">ABOUT US</a>
+      <a href="#">OUR SERVICES</a>
+      <a href="#">OUR PROJECT</a>
+      <a href="#">OUR BLOG</a>
+      <a href="#">CONTACT US</a>
+      <button class="connect">Buy now</button>
+    </div>
+    <img src="#" alt="" >
+  </header>
 <body>
   <app-root></app-root>
 </body>
