INIT:new changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,17 @@
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
-  <ul class="navbar">
+
+
+  <div class="navbar">
+    <ul class="left">
+      <li><a href=""><i class="fa fa-phone-square"> +90 912 345 67 89</i>
+      </a></li>
+      <li><a href=""><i class="fa fa-fax"> info@gmail.com </i>
+      </a></li>
+   </ul>
+   
+  <ul class="right">
     <li><a href=""><i class="fa fa-linkedin-square"></i>
     </a></li>
     <li><a href=""><i class="fa fa-youtube"></i>
@@ -18,9 +28,10 @@
     </a></li>
     <li><a href=""><i class="fa fa-facebook-square"></i>
     </a></li>
-</ul>
+</ul></div>
 
-  <header class="header">
+  <div class="header">
+    
     <div>
       <a href="#">HOME</a>
       <a href="#">ABOUT US</a>
@@ -31,7 +42,7 @@
       <button class="connect">Buy now</button>
     </div>
     <img src="#" alt="" >
-  </header>
+  </div>
 <body>
   <app-root></app-root>
 </body>
