INIT:web page is like the picture

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 
   <div class="navbar">
     <ul class="left">
-      <li><a href=""><i class="fa fa-phone-square"> +90 912 345 67 89</i>
+      <li><a href=""><i class="fa fa-phone"> +90 912 345 67 89</i>
       </a></li>
-      <li><a href=""><i class="fa fa-fax"> info@gmail.com </i>
+      <li><a href=""><i class="fa fa-envelope-o"> info@gmail.com </i>
       </a></li>
    </ul>
    
@@ -30,19 +30,28 @@
     </a></li>
 </ul></div>
 
+
   <div class="header">
-    
-    <div>
+    <div class="menu">
       <a href="#">HOME</a>
       <a href="#">ABOUT US</a>
       <a href="#">OUR SERVICES</a>
       <a href="#">OUR PROJECT</a>
       <a href="#">OUR BLOG</a>
       <a href="#">CONTACT US</a>
-      <button class="connect">Buy now</button>
     </div>
+    <div>
+      <button class="connect">Buy now</button> 
+    </div>
+      <div>
+      <i class="fa fa-search"> </i>
+      <i class="fa fa-bars"> </i>
+    </div>
+   </div>
     <img src="#" alt="" >
   </div>
+
+
 <body>
   <app-root></app-root>
 </body>
