INIT:css changed to tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -11,41 +11,41 @@
 <body>
 
 
-  <div class="navbar">
-    <ul class="left">
-      <li><a href=""><i class="fa fa-phone"> +90 912 345 67 89</i>
+  <div class="h-[25px] bg-cyan-700 flex items-center justify-between ">
+    <ul class="flex items-center justify-center text-white">
+      <li class="px-4"><a href=""><i class="fa fa-phone"> +90 912 345 6789</i>
       </a></li>
       <li><a href=""><i class="fa fa-envelope-o"> info@gmail.com </i>
       </a></li>
    </ul>
    
-  <ul class="right">
-    <li><a href=""><i class="fa fa-linkedin-square"></i>
+  <ul class="flex items-center justify-center text-white">
+    <li class="px-1"><a href=""><i class="fa fa-linkedin-square"></i>
     </a></li>
-    <li><a href=""><i class="fa fa-youtube"></i>
+    <li class="px-1"><a href=""><i class="fa fa-youtube"></i>
     </a></li>
-    <li><a href=""><i class="fa fa-twitter-square"></i>
+    <li class="px-1"><a href=""><i class="fa fa-twitter-square"></i>
     </a></li>
-    <li><a href=""><i class="fa fa-facebook-square"></i>
+    <li class="px-1"><a href=""><i class="fa fa-facebook-square"></i>
     </a></li>
 </ul></div>
 
 
-  <div class="header">
-    <div class="menu">
-      <a href="#">HOME</a>
-      <a href="#">ABOUT US</a>
-      <a href="#">OUR SERVICES</a>
-      <a href="#">OUR PROJECT</a>
-      <a href="#">OUR BLOG</a>
-      <a href="#">CONTACT US</a>
+  <div class="h-[60px] flex justify-end items-center border-b-2 border-solid border-gray-800">
+    <div class="flex items-center justify-end">
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">HOME</a>
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">ABOUT US</a>
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR SERVICES</a>
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR PROJECT</a>
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR BLOG</a>
+      <a class="border-gray-700 border-r text-[14px] px-3 " href="#">CONTACT US</a>
     </div>
     <div>
-      <button class="connect">Buy now</button> 
+      <button class="w-[90px] h-[35px] text-white rounded bg-slate-700 border-solid border-1 border-white mx-[20px] cursor-pointer hover:bg-cyan-400">Buy now</button> 
     </div>
-      <div>
-      <i class="fa fa-search"> </i>
-      <i class="fa fa-bars"> </i>
+      <div >
+      <i class="fa fa-search px-2 text-gray-600" > </i>
+      <i class="fa fa-bars px-2   text-gray-600"> </i>
     </div>
    </div>
     <img src="#" alt="" >
