--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
   <body>
     <app-root></app-root>
   </body>
